--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-white">
+<nav class="navbar navbar-expand-lg bg-white sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="./img/logo/logo.png" alt="Logo" width="150" height="150" class="logo d-inline-block align-text-top">
