--- a/compra.html
+++ b/compra.html
@@ -31,8 +31,8 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-white">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/index.html">
-        <img src="/img/logo/logo.png" alt="Logo" width="150" height="150" class="logo d-inline-block align-text-top">
+      <a class="navbar-brand" href="index.html">
+        <img src="./img/logo/logo.png" alt="Logo" width="150" height="150" class="logo d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
